--- a/pages/pages.css
+++ b/pages/pages.css
@@ -2,65 +2,55 @@
    text-align: center;
    margin-bottom: 20px;
    padding-top: 30px;
-
 }
-
 .slider__wrap{
 max-width: 800px; 
 margin: 0 auto;
 }
 
-img{
-width: 100%; 
-height: 100%;
+.slider__viewport{
+margin:  20px auto;
+width: 80vw;
+overflow: hidden;
 }
 
 .slider {
-   margin-bottom: 20px;
-   width: calc(100%*5);
-   /* height: 450px; */
-   display: flex;
-   justify-content: start;
-   flex-wrap: nowrap;
-   position: relative;
+width:400vw;
+display: flex;
+justify-content: start;
+flex-wrap: nowrap;
+position: relative;
+margin-bottom: 20px;
 }
-.slide {
-   width: 100%;
-   /* height: 60vw; */
-   height: 100%;
-}
-/* .active{
-   display: block;
-} */
 
-.slider__viewport{
-   margin: 0 auto 20px;
-   width: 100%;
-   height: 450px;
-   overflow: hidden;
+.slide {
+width: 80vw;
 }
+
+img{
+width: 80vw; 
+}
+
 .slider__control-button {
-   padding: 20px;
-   position: absolute;
-   top: 50%;
-   background: rgb(84, 184, 224);
-   border-radius: 30px;
-   cursor: pointer;
-   transition: .5s;
+padding: 20px;
+position: absolute;
+top: 50%;
+background: rgb(84, 184, 224);
+border-radius: 30px;
+cursor: pointer;
+transition: .5s;
 }
 .slider__control-button:hover {
-   background-color: #716df5;
+background-color: #716df5;
 }
 
 .slider__button_prev {
-   left: 20px;
+left: 20px;
 }
 .slider__button_next {
-   right: 20px;
+right: 20px;
 }
-.slider__pagination {
-   
-}
+
 #viewSlider{
    display:flex;
    justify-content: center;
