--- a/pages/header.css
+++ b/pages/header.css
@@ -1,28 +1,36 @@
+.header {
+    background-color: #DEB887;
+    }
+body{
+    max-width: 1280px;
+    margin: 0 auto;
+}
+.main {
+    background: url(../img/Fon.jpg);
+}
+
 h1{
     padding-left: 30px; 
-    font-size: 60px;
-    color: rgb(103, 103, 218);
+    font-size: 70px;
+    color: #8b0058;
+    padding-bottom: 10px;
 }
-h2{
-    font-size: 20px; 
-}
+
 .nav{
-    margin-top: 30px;
+    padding-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-
 .popUp.open{
-    right:0;
 }
 
 .nav__list {
-    display: flex;
-    height: 60px;
-    align-items: center;
+    display:flex;
+    align-content: center;
 }
+
 .nav__item {
     padding-right: 30px; 
     font-size: 30px;
@@ -38,7 +46,8 @@ align-items: center;
     right: -300px;
     width: 195px;
     height:200px;
-    background-color:rgb(250, 237, 101);
+    border: 2px solid #8b0058;
+    background-color:#E6E6FA;
     z-index: 2;
     display: flex;
     transition: 500ms;
@@ -47,9 +56,9 @@ align-items: center;
 }
 .open {
     right: 0; }  
+
 .nav {
 align-items: flex-start;}
-
 
 .nav__list {
 display: flex;
@@ -62,22 +71,26 @@ padding-bottom: 30px;
 right: 300px;
 padding-right: 0px; 
 text-decoration: underline;
+text-align: center;
+color: #8b0058;
 }
 
 
 /* button animation**************************************************************** */
-.burgerMenu__line{
-transition: 500ms;
-width: 50px;
-height:3px;
-background-color:rgb(0, 0, 0);
-margin-top: 5px;}
-
 .openBurger_button {
 display: block;
 margin-right: 30px;
 margin-left: auto;
-margin-top: 30px;}
+margin-top: 30px;
+background: transparent;
+}
+
+.burgerMenu__line{
+transition: 500ms;
+width: 50px;
+height:3px;
+background-color:#8b0058;
+margin-top: 5px;} 
 
 .line__first{
 transform: translate(0px, 7px) rotate(45deg);transition: 1000ms;}
