--- a/pages/calc.css
+++ b/pages/calc.css
@@ -6,13 +6,13 @@ h2{
 }
 
 .calc {
-    margin-left: 100px;
-    margin-top: 40px;
+     margin-left: 100px; 
+     margin-top: 40px; 
     border: solid 2px #8b0058;
     border-radius: 20px;
     background-color:#E6E6FA;
-    width: 600px;
-    margin-bottom: 50px;
+    max-width: 600px;
+    margin-bottom: 50px; 
 }
 .calc__fieldset {
     display: flex;
@@ -26,7 +26,7 @@ h2{
 .calc__inp {
     border: solid 1px;
     border-radius: 5px;
-    width: 350px;
+    max-width: 350px;
     height: 30px;
     margin: 10px 10px;
     font-size: 20px;
@@ -41,4 +41,18 @@ h2{
     font-size: 30px;
     color: #8B0000;
     margin: 10px 10px;
+}
+
+
+@media (min-width:250px) and (max-width:600px) {
+    .calc {
+        margin: 40px; 
+       border: solid 2px #8b0058;
+       border-radius: 20px;
+       background-color:#E6E6FA;
+       max-width: 600px;
+   }
+   .calc__label {
+    font-size: 20px;
+}
 }
